[Fix] Increases contrast in boxes and buttons.

--- a/themes/wwwevergreen/css/src/smacss/modules/_boxes.scss
+++ b/themes/wwwevergreen/css/src/smacss/modules/_boxes.scss
@@ -87,7 +87,7 @@ p.box,  // WYSIWYG
 }
 
 // Increase the contrast of hovered links in blue boxes
-.box:not(.action-box) a:hover{
+.box:not(.action-box) a:not(.button):hover{
 	// typography
 	color: mix($shade, $sky-blue, 40%);
 	// decoration
